push data to server

--- a/HostBuilder_Testing/MainWindow.xaml
+++ b/HostBuilder_Testing/MainWindow.xaml
@@ -1,14 +1,16 @@
-﻿<Window x:Class="HostBuilder_Testing.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HostBuilder_Testing"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        WindowState="Maximized"
-        >
+﻿<Window
+    x:Class="HostBuilder_Testing.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:HostBuilder_Testing"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    WindowState="Maximized"
+    mc:Ignorable="d">
     <Grid>
-
+        <TextBox Text="{Binding Path=SingleUser.Username, Mode=OneWay}" />
     </Grid>
 </Window>
