--- a/HostBuilder_Testing/App.xaml
+++ b/HostBuilder_Testing/App.xaml
@@ -1,8 +1,15 @@
-﻿<Application x:Class="HostBuilder_Testing.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HostBuilder_Testing">
+﻿<Application
+    x:Class="HostBuilder_Testing.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:HostBuilder_Testing"
+    xmlns:views="clr-namespace:HostBuilder_Testing.Views"
+    xmlns:vm="clr-namespace:HostBuilder_Testing.ViewModels">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <DataTemplate DataType="{x:Type vm:HomeViewModel}">
+                <views:HomeView />
+            </DataTemplate>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
