--- a/HostBuilder_Testing/MainWindow.xaml
+++ b/HostBuilder_Testing/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="HostBuilder_Testing.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:HostBuilder_Testing.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HostBuilder_Testing"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,6 +12,33 @@
     WindowState="Maximized"
     mc:Ignorable="d">
     <Grid>
-        <TextBox Text="{Binding Path=SingleUser.Username, Mode=OneWay}" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <controls:TopHeader Grid.Row="0" Grid.Column="1" />
+        <controls:NavigationBar Grid.Row="0" Grid.RowSpan="2" />
+
+        <Grid
+            Grid.Row="1"
+            Grid.Column="1"
+            Margin="10"
+            Background="white">
+            <!--<TextBlock Text="{Binding Path=CurrentViewModel, Mode=Default}" />-->
+
+            <ScrollViewer
+                Grid.Column="1"
+                HorizontalScrollBarVisibility="Disabled"
+                VerticalScrollBarVisibility="Auto">
+                <ContentControl Content="{Binding CurrentViewModel}" />
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </Window>
