--- a/HostBuilder_Testing/Styles/_Common.xaml
+++ b/HostBuilder_Testing/Styles/_Common.xaml
@@ -1,5 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <!--  TextBox  -->
+    <Style TargetType="TextBox">
+        <Setter Property="Padding" Value="5,7" />
+    </Style>
 
     <!--  Buttons  -->
     <Style TargetType="Button">
